--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.2",
     "cheerio": "^1.0.0-rc.3",
     "cnpm": "^6.0.0",
+    "eventproxy": "^1.0.0",
     "install": "^0.12.2",
     "moment": "^2.24.0",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "superagent": "^5.0.5"
   }
 }
